--- a/wyun-restsvc/src/main/resources/templates/home.html
+++ b/wyun-restsvc/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
-  <head th:include="layout :: htmlhead" th:with="title='Hello'"></head>
+  <head th:include="layout :: htmlhead" th:with="title='Matrix WIFI'"></head>
 
   <body>
     <div th:replace="layout :: navbar">(navbar)</div>
@@ -11,6 +11,7 @@
         <p>The current time is <span th:text="${currentTime}">(time)</span></p>
       </div>
     </div>
+    
 
     <div th:include="layout :: footer" id="footer">(footer)</div>
 
