--- a/wyun-restsvc/src/main/resources/templates/layout.html
+++ b/wyun-restsvc/src/main/resources/templates/layout.html
@@ -27,9 +27,14 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+            <li><a href="../public/about.html" th:href="@{/public/about.html}">About</a></li>
             <li><a href="#contact">Contact</a></li>
+            <div class="pull-right">
+                 <form th:action="@{/logout}" method="post">
+                   <input type="submit" value="Sign Out"/>
+                </form>
+            </div>
           </ul>
         </div>
       </div>
