--- a/wyun-restsvc/src/main/resources/templates/login.html
+++ b/wyun-restsvc/src/main/resources/templates/login.html
@@ -1,20 +1,127 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Spring Security Example </title>
-    </head>
-    <body>
-        <div th:if="${param.error}">
-            Invalid username and password.
+<head>
+ 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Matrix Wifi - Admin Login</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+ 
+<!-- StyleSheet -->
+<link th:href="@{/webjars/bootstrap/3.0.3/css/bootstrap.css}" rel="stylesheet"></link>
+<link th:href="@{/css/custom.css}" rel="stylesheet"></link>
+</head>
+ 
+<body>
+<!-- Navigation Bar -->
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+ 
+            </a>
+ 
+    <a href="#" class="brand">Matrix WIFI</a>
+ 
+    <div class="nav-collapse collapse pull-right">
+        <ul class="nav">
+            <li><a href="#forgot" data-toggle="modal"><i class="icon-user icon-white"></i> Forgot Password</a></li>
+            <li class="divider-vertical"></li>
+            <li><a href="#contact" data-toggle="modal"><i class="icon-envelope icon-white"></i> Contact Us</a></li>
+            <li class="divider-vertical"></li>
+ 
+        </ul>
+    </div>
+ 
+    </div>
+  </div>
+</div>
+<!-- Navigation Ends -->
+ 
+<!-- Main Container -->
+<section>
+        
+<div class="container login">
+    
+    <div class="row ">
+        <div class="center span4 well">
+            <legend>Please Sign In</legend>
+            <div th:if="${param.error}" class="alert alert-error">
+                <a class="close" data-dismiss="alert" href="#">×</a>Incorrect Username or Password!
+            </div>
+             <div th:if="${param.logout}" class="alert">
+                <a class="close" data-dismiss="alert" href="#">×</a>You have been logged out.
+            </div>
+            <form method="post" th:action="@{/login}" accept-charset="UTF-8">
+            <div><input type="text" id="username" class="form-control" name="username" placeholder="Username" /></div>
+            <div><input type="password" id="password" class="form-control" name="password" placeholder="Password" /></div>
+            <label class="checkbox">
+                <input type="checkbox" name="remember" value="1" /> Remember Me
+            </label>
+            <button type="submit" name="submit" class="btn btn-primary btn-block">Sign in</button>
+            </form>
         </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
-        <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
-        </form>
-    </body>
+    </div>
+</div>
+<p class="text-center muted ">&copy; Copyright 2014 - Matrix WIFI</p>
+</section>
+<!-- Main Container Ends -->
+ 
+<!-- Forgot Password Model Box -->
+<div id="forgot" class="modal hide fade in" style="display: none; ">
+<div class="modal-header">
+<a class="close" data-dismiss="modal">×</a>
+<h3>Forgot Password</h3>
+</div>
+<div class="modal-body">
+<p>Enter your username to reset the password</p>
+<form>
+      <div class="controls controls-row">
+          <input id="name" name="name" type="text" class="span3" placeholder="Name" />
+      </div>
+ 
+</form>
+</div>
+<div class="modal-footer">
+<a href="#" class="btn btn-primary">Submit</a>
+<a href="#" class="btn" data-dismiss="modal">Close</a>
+</div>
+</div>
+ 
+<!-- Contact Us Model Box -->
+<div id="contact" class="modal hide fade in" style="display: none; ">
+<div class="modal-header">
+<a class="close" data-dismiss="modal">×</a>
+<h3>Contact Us</h3>
+</div>
+<div class="modal-body">
+<form>
+      <div class="controls controls-row">
+          <input id="name" name="name" type="text" class="span3" placeholder="Name" />
+      </div>
+ 
+       <div class="controls controls-row">
+       <input id="email" name="email" type="email" class="span3" placeholder="Email address" />
+       </div>
+ 
+      <div class="controls">
+          <textarea id="message" name="message" class="span5" placeholder="Your Message" rows="5"></textarea>
+      </div>
+ 
+  </form>
+</div>
+ 
+<div class="modal-footer">
+<a href="#" class="btn btn-primary">Submit</a>
+<a href="#" class="btn" data-dismiss="modal">Close</a>
+</div>
+</div>
+ 
+<!-- JavaScript -->
+<script th:src="@{/webjars/jquery/2.0.3/jquery.min.js}"></script>
+ <script th:src="@{/webjars/bootstrap/3.0.3/js/bootstrap.min.js}"></script>
+</body>
 </html>
